--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,9 @@
 {
-  "author": "Marcel Grolms",
-  "background":
-  {
-    "scripts": [
-      "/src/js/amazonMusicHelperConstants.js",
-      "/src/js/amazonMusicHelperUtils.js", 
-      "/src/js/amazonMusicHelperDomEvents.js", 
-      "/src/js/amazonMusicHelperProcessor.js", 
-      "/src/js/amazonMusicHelperRequests.js",
-      "/src/js/amazonMusicHelper.js"
-    ]
-  },
-  "description": "Add song to playlist, show notifications with informations of current playing song.",
-  "manifest_version": 2,
   "name": "Amazon-Music-Helper",
+  "description": "Add song to playlist, show notifications with informations of current playing song.",
+  "version": "1.0.0",
+  "author": "Marcel Grolms",
+  "manifest_version": 2,
   "permissions": [
     "menus",
     "downloads",
@@ -25,15 +15,19 @@
     "tabs",
     "cookies"
   ],
-  "version": "1.0.0",
+  "background": {
+    "scripts": [
+      "/src/js/amazonMusicHelperConstants.js",
+      "/src/js/amazonMusicHelperUtils.js", 
+      "/src/js/amazonMusicHelperDomEvents.js", 
+      "/src/js/amazonMusicHelperProcessor.js", 
+      "/src/js/amazonMusicHelperRequests.js",
+      "/src/js/amazonMusicHelper.js"
+    ]
+  },
   "browser_action":
   {
-    "browser_style": true,
-    "default_icon":
-    {
-      "16": "/src/assets/icons8-amazon-music-36.png",
-      "32": "/src/assets/icons8-amazon-music-36.png"
-    },
+    "default_icon": "/src/assets/icons8-amazon-music-32.png",
     "default_title": "Amazon Music Helper"
   },
   "commands":
@@ -55,12 +49,12 @@
   },
   "options_ui":
   {
-    "page": "/src/html/options.html",
-    "open_in_tab": true
+    "page": "/src/html/options.html"
   },
   "icons":
   {
-    "48": "/src/assets/icons8-amazon-music-48.png"
+    "48": "/src/assets/icons8-amazon-music-48.png",
+    "96": "/src/assets/icons8-amazon-music-96.png"
   },
   "browser_specific_settings": {
     "gecko": {
@@ -68,5 +62,4 @@
       "strict_min_version": "48.0"
     }
   }
-
 }
